force-app/main/default/objects/Vertical__c/fields/Active_Version__c.field-meta.xml
<CustomField>
    <fullName>Active_Version__c</fullName>
    <label>Active Version</label>
    <summaryFilterItems>
        <field>Vertical_Version__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Vertical_Version__c.Vertical__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>