force-app/main/default/objects/Vertical__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <description>Unique name of the vertical, i.e.: home_contents, broadband, general_insurance, ...</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique name of the vertical, i.e.: homecontents, broadband, generalinsurance, ...</inlineHelpText>
    <label>Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>