force-app/main/default/objects/Vertical__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progressive</fullName>
                <default>true</default>
                <label>Progressive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>