force-app/main/default/objects/Vertical__c/fields/Final_Quote_Template__c.field-meta.xml
<CustomField>
    <fullName>Final_Quote_Template__c</fullName>
    <description>This field is used to contain the Unique Email template Name</description>
    <inlineHelpText>This field is used to contain the Unique Email template Name</inlineHelpText>
    <label>Final Quote Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>