force-app/main/default/objects/Vertical__c/fields/Product_per_page__c.field-meta.xml
<CustomField>
    <fullName>Product_per_page__c</fullName>
    <inlineHelpText>Display the number of product per page</inlineHelpText>
    <label>Product per page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>