force-app/main/default/objects/Vertical__c/fields/Total_Versions__c.field-meta.xml
<CustomField>
    <fullName>Total_Versions__c</fullName>
    <label>Total Versions</label>
    <summaryForeignKey>Vertical_Version__c.Vertical__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>