force-app/main/default/objects/Vertical__c/fields/Vertical_Icon__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Icon__c</fullName>
    <description>Name of the lightning icon that represent the vertical, this can be found at the following address https://www.lightningdesignsystem.com/icons/</description>
    <inlineHelpText>Name of the lightning icon that represent the vertical, this can be found at the following address https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>Vertical Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>home</fullName>
            </value>
            <value>
                <fullName>opportunity</fullName>
            </value>
            <value>
                <fullName>account</fullName>
            </value>
            <value>
                <fullName>order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>