force-app/main/default/objects/Vertical__c/validationRules/Active_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Version</fullName>
    <active>true</active>
    <description>Only one version can be active for every vertical</description>
    <errorConditionFormula>Active_Version__c&gt;1</errorConditionFormula>
    <errorMessage>Only one version can be active at a time.</errorMessage>
</ValidationRule>